# bioarn_v1

./: .gitignore  BioARN_Architecture.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  sitecustomize.py  test_imports.py
.squad/: .first-run  decisions.md  routing.md  team.md
bioarn/: __init__.py  __main__.py  _version.py  cli.py  config.py  loop.py  scaling.py  system.py
configs/: cifar.yaml  default.yaml  language.yaml  mnist.yaml
demo/: README.md  __init__.py  app.py  models.py  requirements.txt  visualizations.py
docs/: README.md  api_reference.md  architecture.md  getting_started.md  paper_draft.md  paper_precision_weighting.md  research_notes.md
experiments/: associative_memory_demo.py  audio_demo.py  bias_audit.py  cifar_scaling.py  cifar_training.py  cifar_tuning.py  combined_config_sweep.py  context_demo.py  continual_learning.py  continual_learning_eval.py  continual_learning_mnist.py  conv_scaling_study.py  data_scaling.py  energy_report.py  energy_report_data.json  energy_report_results.md  ensemble_cifar.py  feature_comparison.py  formal_benchmarks.py  fullscale_softhebb.py  hebbian_scaling.py  improvement_comparison.py  interleave_scaling.py  large_pool_scaling.py  lateral_ablation.py  lava_validation.py  linear_probe_benchmark.py  local_contrastive_infonce.py  local_ssl.py  local_ssl_3b.py  local_ssl_3c.py  local_target_propagation.py  loihi_e2e_demo.py  memory_api_demo.py  mnist_improved.py  mnist_poc.py  multimodal_demo.py  multimodal_fusion_demo.py  paper_benchmarks.py  real_cifar_comparison.py  (+12 more)
logs/: trainer-20260623T212319Z.jsonl  trainer-20260623T212352Z.jsonl  trainer-20260623T212353Z.jsonl  trainer-20260623T212414Z.jsonl  trainer-20260623T212448Z.jsonl  trainer-20260623T213511Z.jsonl  trainer-20260623T213512Z.jsonl  trainer-20260623T213518Z.jsonl  trainer-20260623T213519Z.jsonl  trainer-20260623T214302Z.jsonl  trainer-20260623T214456Z.jsonl  trainer-20260623T215827Z.jsonl  trainer-20260623T215828Z.jsonl  trainer-20260623T220157Z.jsonl  trainer-20260623T220231Z.jsonl  trainer-20260623T220334Z.jsonl  trainer-20260623T220335Z.jsonl  trainer-20260623T222801Z.jsonl  trainer-20260623T224054Z.jsonl  trainer-20260623T224055Z.jsonl  trainer-20260623T230249Z.jsonl  trainer-20260624T000527Z.jsonl  trainer-20260624T082845Z.jsonl  trainer-20260624T083000Z.jsonl  trainer-20260624T084935Z.jsonl  trainer-20260624T084936Z.jsonl  trainer-20260624T084950Z.jsonl  trainer-20260624T085634Z.jsonl  trainer-20260624T094618Z.jsonl  trainer-20260624T100541Z.jsonl  trainer-20260624T104832Z.jsonl  trainer-20260624T143212Z.jsonl  trainer-20260624T143213Z.jsonl  trainer-20260624T150340Z.jsonl  trainer-20260624T150341Z.jsonl
paper/: bioarn_paper.md  supplementary.md
scripts/: lint.ps1  test.ps1
tests/: conftest.py  performance_baseline.json  test_associative_engine.py  test_associative_fabric.py  test_audio.py  test_augmentation.py  test_ccc.py  test_cifar_training.py  test_context_attention.py  test_conv_ccc.py  test_data_pipelines.py  test_demo.py  test_ensemble.py  test_export.py  test_gnw.py  test_hardware.py  test_hierarchy.py  test_integration.py  test_integration_e2e.py  test_integration_improvements.py  test_large_pool.py  test_lateral_prediction.py  test_lava_bridge.py  test_loihi_demo.py  test_loihi_port.py  test_loop.py  test_margin_gate.py  test_memory_api.py  test_mnist_accuracy.py  test_motor.py  test_multimodal_fusion.py  test_multimodal_training.py  test_pc_layer.py  test_performance.py  test_persistence.py  test_preprocessing.py  test_production.py  test_rl.py  (+15 more)
(+178 files in other folders)
